Post: sublime-text-3-install-and-setup

--- a/index.html
+++ b/index.html
@@ -1,1 +1,19 @@
-test this domain: learnshare.xianbai.me
+<!DOCTYPE html>
+<html>
+<head>
+  <meta charset="UTF-8">
+  <title>LearnShare</title>
+</head>
+<body>
+  learnshare.xianbai.me
+</body>
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-66947518-2', 'auto');
+  ga('send', 'pageview');
+</script>
+</html>
